--- a/app/src/main/res/layout/fragment_detalle_insumo.xml
+++ b/app/src/main/res/layout/fragment_detalle_insumo.xml
@@ -28,6 +28,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etNombre"
                 android:layout_width="match_parent"
+                android:enabled="false"
                 android:layout_height="wrap_content"
                 android:inputType="textCapSentences" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -42,6 +43,7 @@
                 android:id="@+id/spTipo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:enabled="false"
                 android:inputType="none"
                 android:focusable="false" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -56,6 +58,7 @@
                 android:id="@+id/spUnidad"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:enabled="false"
                 android:inputType="none"
                 android:focusable="false" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -69,6 +72,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etStock"
                 android:layout_width="match_parent"
+                android:enabled="false"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -82,6 +86,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etFechaVenc"
                 android:layout_width="match_parent"
+                android:enabled="false"
                 android:layout_height="wrap_content"
                 android:inputType="date" />
         </com.google.android.material.textfield.TextInputLayout>
