--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -91,6 +91,9 @@
         <action
             android:id="@+id/action_cosechaFragment_to_gestionFragment"
             app:destination="@id/gestionFragment" />
+        <action
+            android:id="@+id/action_cosechaFragment_to_cosechasDeUnLoteFragment"
+            app:destination="@id/cosechasDeUnLoteFragment" />
     </fragment>
     <fragment
         android:id="@+id/insumoFragment"
@@ -242,6 +245,15 @@
         <action
             android:id="@+id/action_detalleInsumoFragment_to_insumoFragment"
             app:destination="@id/insumoFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/cosechasDeUnLoteFragment"
+        android:name="com.example.agroapp.menu.ui.gestion.cosecha.cosechasDeUnLote.CosechasDeUnLoteFragment"
+        android:label="fragment_cosechas_de_un_lote"
+        tools:layout="@layout/fragment_cosechas_de_un_lote" >
+        <action
+            android:id="@+id/action_cosechasDeUnLoteFragment_to_cosechaFragment"
+            app:destination="@id/cosechaFragment" />
     </fragment>
 
 </navigation>
